<resources>
    <string name="app_name">FitFlex</string>
    <string name="action_settings">Settings</string>
    <string name="email">E-mailadres</string>
    <string name="wachtwoord">Wachtwoord</string>
    <string name="login">LOGIN</string>
    <string name="toon_pwd">Toon wachtwoord</string>
    <string name="verberg_pwd">Verberg wachtwoord</string>
    <string name="vergeet">Wachtwoord vergeten?</string>
    <string name="sluitknop">Sluitknop voor Activity</string>
    <string name="nieuweGebruiker">Nog geen lid? Registreer hier.</string>
    <string name="telnr">Telefoonnummer</string>
    <string name="bevestig_pwd">Bevestig wachtwoord</string>
    <string name="voorwaarden">Klik hier voor de algemene voorwaarden</string>
    <string name="registreer">REGISTREER</string>
    <string name="reeds_lid">Al een account? Log je in</string>
    <string name="succesvolGeregistreerd">Succesvol geregistreerd</string>
    <string name="geregistreerdeEmail">Gelieve uw geregistreerde email in te geven : </string>
    <string name="bevestig">BEVESTIG</string>
    <string name="terug">TERUG</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="pemail">Email</string>
    <string name="telefoon">Telefoonnummer</string>
    <string name="e_mailadres">E-mailadres</string>
    <string name="naam">Naam</string>
    <string name="telefoonnummer">Telefoonnummer</string>
    <string name="locatie">Locatie</string>
    <string name="desc">profielfoto/icons</string>
    <string name="logo">logo</string>
    <string name="kies_een_naam_voor_je_workout">Kies een naam voor je workout:</string>
    <string name="volgende">Volgende</string>
    <string name="start">Start</string>
    <string name="voeg_toe">Voeg Toe</string>
    <string name="title_oefening_list">Oefeningen</string>
    <string name="toevoegen">Toevoegen</string>
    <string name="voer_het_aantal_repetities_in_en_druk_op_toevoegen">Voer het aantal repetities in en druk op toevoegen</string>
    <string name="verwijder">Verwijder</string>
    <string name="aantal_reps">Aantal Reps</string>
    <string name="aantal_rondes">Aantal Rondes</string>
    <string name="rust_tussen_rondes">Rust na ronde</string>
    <string name="rust_tussen_oefeningen">Rust na oefening</string>
    <string name="title_oefening_detail" />
    <string name="itemfoto">itemFoto</string>
    <string name="icon">icon</string>
    <string name="overzicht">Overzicht</string>
    <string name="mijn_workouts">Mijn Workouts</string>
    <string name="nieuw">Nieuw</string>
    <string name="readyfoto">readyFoto</string>
    <string name="beginnen">Beginnen</string>
    <string name="klik_om_te_starten">Klik om te starten</string>
    <string name="_00_00">00:00</string>
    <string name="seconden">s</string>
    <string name="help">Help</string>
    <string name="annuleer">annuleer</string>
    <string name="hulp_nodig">Hulp nodig?</string>
    <string name="dialog_info1">1.   Druk op de plusknop</string>
    <string name="dialog_info2">2.   Kies een oefening uit de lijst</string>
    <string name="dialog_info3">3.   Je krijgt details over de oefening te zien</string>
    <string name="dialog_info4">4.   Voer het aantal repetities in</string>
    <string name="dialog_info5">5.   Druk op het pijltje naar rechts hier onderaan om door te gaan</string>
    <string name="infoicon">infoIcon</string>
    <string name="begrepen">Begrepen</string>
    <string name="opslaan">Opslaan</string>
    <string name="einde_workout">Einde workout!</string>
    <string name="ga_terug">Ga terug</string>
    <string name="uitloggen">Uitloggen</string>
    <string name="update">Update</string>
    <string name="label">label</string>
    <string name="no_pain_no_gain">No Pain, No Gain...</string>
    <string name="beste_nieuwe_gebruiker_uw_persoonlijke_profielgegevens_zullen_worden_bewaard_in_een_databanksysteem">Beste nieuwe gebruiker! Uw persoonlijke profielgegevens zullen worden bewaard in een databanksysteem.
                                                                                                                        Deze worden voortdurend beschermd en niet doorgegeven aan derden.</string>
    <string name="oefeningen">Oefeningen</string>
    <string name="workouts">Workouts</string>
    <string name="foto">foto</string>
    <string name="wachtwoord_wijzigen">Wachtwoord wijzigen</string>
    <string name="vul_de_volgende_gegevens_in">Vul de onderstaande velden in:</string>
    <string name="wijzigen">Wijzigen</string>
    <string name="huidig_wachtwoord">Huidig wachtwoord</string>
    <string name="nieuw_wachtwoord">Nieuw wachtwoord</string>
    <string name="wat_moet_ik_doen">Wat moet ik doen?</string>
</resources>
