<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/infoDialog"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_gravity="center">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:text="@string/einde_workout">

                </TextView>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/thumb_up"
                    android:tint="@color/colorPrimary"
                    android:contentDescription="@string/infoicon" />

                <TextView
                    android:id="@+id/boodschap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="25sp">

                </TextView>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/gaTerugKnop"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="50dp"
                    android:text="@string/ga_terug"
                    app:icon="@drawable/home"
                    android:layout_gravity="center_horizontal">

                </com.google.android.material.button.MaterialButton>

            </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>